--- a/codenames/templates/codenames/layout.html
+++ b/codenames/templates/codenames/layout.html
@@ -2,24 +2,24 @@
 {% load staticfiles %}
 
 <head>
-  <title>Pancake Waffle</title>
+  <title>Codenames</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Source Sans Pro Font -->
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
 
 
-  <link rel="stylesheet" type="text/css" href="{% static 'polls/css/font-awesome.min.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'polls/css/bootstrap.min.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'polls/css/style.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'codenames/css/font-awesome.min.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'codenames/css/bootstrap.min.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'codenames/css/style.css' %}" />
 </head>
 
 <body>
-  {% include "polls/header.html" %}
+  {% include "codenames/header.html" %}
 
   {% block body %}
 
   {% endblock %}
-<script type="text/javascript" src="{% static 'polls/js/jquery.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'polls/js/bootstrap.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'polls/js/main.js' %}"></script>
+<script type="text/javascript" src="{% static 'codenames/js/jquery.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'codenames/js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'codenames/js/main.js' %}"></script>
 </body>
