--- a/codenames/templates/codenames/header.html
+++ b/codenames/templates/codenames/header.html
@@ -5,6 +5,15 @@
   </div>
   <ul class="nav nav-tabs">
     <li role="presentation" ><a href="{% url 'index' %}">Home- New Game</a></li>
-    <li role="presentation" ><a href="/codenames/register/">Register</a></li>
+    <li role="presentation" >
+      {% if user.is_anonymous %}
+        <a href="{% url 'login' %}">Login</a>
+      {% else %}
+        <a href="{% url 'logout' %}">Logout</a>
+      {% endif %}
+      </a>
+    </li>
+    <li role="presentation" ><a href="/register/">Register</a></li>
+    <li role="presentation" ><a href="{% url 'profile' %}" >Welcome, {{ user }}.</a></li>
   </ul>
 </div>
