--- a/codenames/templates/registration/login.html
+++ b/codenames/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "polls/layout.html" %}
+{% extends "codenames/layout.html" %}
 
 {% block body %}
 
@@ -6,7 +6,7 @@
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
 
-<form method="post" action="{% url 'polls:login' %}">
+<form method="post" action="{% url 'login' %}">
 {% csrf_token %}
 <table>
 <tr>
