--- a/codenames/templates/codenames/header.html
+++ b/codenames/templates/codenames/header.html
@@ -14,6 +14,7 @@
       </a>
     </li>
     <li role="presentation" ><a href="/register/">Register</a></li>
+    <li role="presentation" ><a href="{% url 'create' %}" >Create new game</a></li>
     <li role="presentation" ><a href="{% url 'profile' %}" >Welcome, {{ user }}.</a></li>
   </ul>
 </div>
