--- a/codenames/templates/codenames/header.html
+++ b/codenames/templates/codenames/header.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <div class="container page-header-wrapper">
-  <div class="col-md-4 waffle-logo">
-    <img src="{% static 'codenames/images/waffle.png' %}" height="104px" />
+  <div class="col-md-2 logo">
+    <img src="{% static 'codenames/images/codenames.jpg' %}" width="100px" height="104px" />
   </div>
   <ul class="nav nav-tabs">
     <li role="presentation" ><a href="{% url 'index' %}">Home- New Game</a></li>
