--- a/codenames/templates/codenames/game.html
+++ b/codenames/templates/codenames/game.html
@@ -64,6 +64,7 @@
     {% else %}
       <div class="row text-center" >
         <button id="submit-guess" class="btn btn-lg">Submit Guess</button>
+        <button id="submit-pass" class="btn btn-lg">Pass</button>
       </div>
     {% endif %}
   {% endif %}
