--- a/codenames/templates/codenames/layout.html
+++ b/codenames/templates/codenames/layout.html
@@ -4,6 +4,7 @@
 <head>
   <title>Codenames</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="{% static 'codenames/images/favicon.ico' %}" />
   <!-- Source Sans Pro Font -->
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
 
@@ -19,7 +20,8 @@
   {% block body %}
 
   {% endblock %}
-<script type="text/javascript" src="{% static 'codenames/js/jquery.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'codenames/js/bootstrap.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'codenames/js/main.js' %}"></script>
+  <div id="user-info" data-request-user="{{user.id}}"></div>
+  <script type="text/javascript" src="{% static 'codenames/js/jquery.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'codenames/js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'codenames/js/main.js' %}"></script>
 </body>
