--- a/codenames/templates/codenames/header.html
+++ b/codenames/templates/codenames/header.html
@@ -16,5 +16,6 @@
       </a>
     </li>
     <li role="presentation" ><a href="/register/">Register</a></li>
+    <li role="presentation" ><a href="{% url 'about'%}">About</a></li>
   </ul>
 </div>
