add official rules

--- a/codenames/templates/codenames/about.html
+++ b/codenames/templates/codenames/about.html
@@ -3,6 +3,7 @@
 {% block body %}
 
 <div class="container">
+  <h4> <a href="http://czechgames.com/files/rules/codenames-rules-en.pdf">Official Rules: Click Here</a> </h4>
 <h3>Overview of Codenames</h3>
 Codenames is a game of deduction and word association!  There are two teams of spies: the Red Team and the Blue Team.  Each organization is trying to contact its agents out in the field, which is a grid of 25 tiles.  Each tile represents a person: a blue agent, a red agent, an innocent civilian, or an assassin.  Your goal is to contact all the agents of your own color before the other team does.  But be careful - if you find the assassin, you lose!  
 
