--- a/codenames/templates/codenames/game.html
+++ b/codenames/templates/codenames/game.html
@@ -66,7 +66,7 @@
     </div>
   </div> <!--End input container -->
 
-  <div class="row">
+  <div class="row"> <!-- Centered bottom content -->
     <div class="col-md-5 text-center">
       Past Clues:
       {% for clue in past_clues %}
@@ -95,7 +95,38 @@
       </div>
       {% endfor %}
     </div>
-  </div>
+    <div class="row">
 
+      <div class=" col-centered detailBox">
+        <div class="titleBox">
+          <label>Game Comments</label>
+            <button type="button" class="close" aria-hidden="true">&times;</button>
+        </div>
+        <div class="commentBox">
+          <p class="taskDescription">Please don't cheat.</p>
+        </div>
+        <div class="actionBox">
+          <ul class="commentList">
+            {% for comment in comments %}
+            <li>
+              <div class="commentText">
+                <p class="">{{ comment.text }}</p> <span class="date sub-text">on {{ comment.time_commented }}</span>
+              </div>
+            </li>
+            {% endfor %}
+          </ul>
+          <form class="form-inline" role="form">
+            <div class="form-group">
+              <input class="form-control" type="text" placeholder="Your comments" />
+            </div>
+            <div class="form-group">
+              <button class="btn btn-default">Add</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+    </div>
+  </div> <!-- End centered bottom content -->
 </div>
 {% endblock %}
