--- a/static/codenames/css/style.css
+++ b/static/codenames/css/style.css
@@ -1,3 +1,6 @@
+body {
+  margin-bottom: 2em
+}
 .word-card{
   margin: 3px;
   border: 2px solid navy;
@@ -15,4 +18,67 @@
 
 .waiting {
   color: red
+}
+
+
+.col-centered{
+    float: none;
+    margin: 0 auto;
+}
+
+/* CSS for comments: https://codepen.io/magnus16/pen/buGiB */
+.detailBox {
+    width:22em;
+    border:1px solid #bbb;
+}
+.titleBox {
+    background-color:#fdfdfd;
+    padding:0.5em;
+}
+.titleBox label{
+  color:#444;
+  margin:0;
+  display:inline-block;
+}
+
+.commentBox {
+  padding:0.5em;
+  border-top:1px dotted #bbb;
+}
+.commentBox .form-group:first-child, .actionBox .form-group:first-child {
+    width:80%;
+}
+.commentBox .form-group:nth-child(2), .actionBox .form-group:nth-child(2) {
+    width:18%;
+}
+.actionBox .form-group * {
+    width:100%;
+}
+.taskDescription {
+    margin-top:10px 0;
+}
+.commentList {
+    padding:0;
+    list-style:none;
+    max-height:200px;
+    overflow:auto;
+}
+.commentList li {
+    margin:0;
+    margin-top:10px;
+}
+.commentList li > div {
+    display:table-cell;
+}
+.commentText p {
+    margin:0;
+}
+.sub-text {
+    color:#aaa;
+    font-family:verdana;
+    font-size:11px;
+}
+.actionBox {
+    border-top:1px dotted #bbb;
+    padding:10px;
 }
