--- a/codenames/templates/codenames/game.html
+++ b/codenames/templates/codenames/game.html
@@ -120,7 +120,7 @@
               <input class="form-control" type="text" placeholder="Your comments" />
             </div>
             <div class="form-group">
-              <button class="btn btn-default">Add</button>
+              <button id="addCommentBtn" class="btn btn-default">Add</button>
             </div>
           </form>
         </div>
